client/src/index.css
@import "~materialize-css/dist/css/materialize.min.css";

.lists {
    width: 50%;
    margin-top: 25px;
    margin-bottom: 25px;
    padding: 10px;
    padding-left: 30px;
    border: 2px solid #00796b;
    border-radius: 15px;
    background-color: #f2f4f4;
}

@media (max-width: 730px){
    .lists {
        width: 90%;
    }
}

.mainPage {
    width: 50%;
    margin-top: 175px;
    color: #00796b;
    text-transform: uppercase;
    text-align: center;
}

.mainPage h5{
    font-weight: 500;
}

@media (max-width: 730px){
    .mainPage {
        width: 80%;
    }
}

.listLi {
    position: relative;
    margin-bottom: 15px;
}

.noteLi {
    position: relative;
    margin-bottom: 15px;
    color: #00796b;
}

.lists .listLi {
    list-style-type: disclosure-closed;
    color: #00796b;
}

.delete {
    position: absolute;
    top: 0;
    bottom: 0;
    margin: auto 0;
    right: 0;
}

.nav{
    color: #00796b;
    font-weight: bold;
    text-transform: uppercase;
    
}

